"FinancialProductHistoryPgmqItemWriter 리팩토링: JSON 비교 최적화, 기존 이력 조회 및 이벤트 타입 판단 로직 개선, 배치 설정 보강 및 테스트 추가"